# databpy

./: .gitignore  .nojekyll  README.md  README.qmd  _quarto.yml  attribute-guide.html  attributes.html  attributes.llms.md  debugging_notebook.ipynb  index.html  index.llms.md  index.qmd  llms.txt  pyproject.toml  search.json
.github/workflows/: ci-cd.yml  docs.yml  test-daily.yml  test-in-blender.yml  test-upstream.yml  tests.yml
api/: AttributeArray.html  AttributeArray.llms.md  AttributeDomains.html  AttributeDomains.llms.md  AttributeTypes.html  AttributeTypes.llms.md  BlenderObject.html  BlenderObject.llms.md  BlenderObjectAttribute.html  BlenderObjectAttribute.llms.md  BlenderObjectBase.html  BlenderObjectBase.llms.md  LinkedObjectError.html  LinkedObjectError.llms.md  attribute.named_attribute.html  attribute.store_named_attribute.html  collection.create_collection.html  create_bob.html  create_bob.llms.md  create_collection.html  create_collection.llms.md  create_curves_object.html  create_curves_object.llms.md  create_mesh_object.html  create_mesh_object.llms.md  create_object.html  create_object.llms.md  create_pointcloud_object.html  create_pointcloud_object.llms.md  evaluate_object.html  evaluate_object.llms.md  index.html  index.llms.md  move_to_collection.html  move_to_collection.llms.md  named_attribute.html  named_attribute.llms.md  object.BlenderObject.html  object.create_bob.html  object.create_object.html  (+4 more)
databpy/: __init__.py  array.py  attribute.py  collection.py  modifier.py  nodes.py  object.py  utils.py  vdb.py
databpy/nodes/: appending.py
docs/: _config.py  _quarto.yml  _sidebar.yml  attribute-guide.qmd  attributes.qmd  index.qmd  objects.json  objects.txt  style.scss
docs/_inv/: bpy_objects.txt  python_objects.json  python_objects.txt
docs/api/: BlenderObject.qmd  _sidebar.yml  attribute.named_attribute.qmd  attribute.store_named_attribute.qmd  collection.create_collection.qmd  create_bob.qmd  create_collection.qmd  create_object.qmd  index.qmd  named_attribute.qmd  object.BlenderObject.qmd  object.create_bob.qmd  object.create_object.qmd  store_named_attribute.qmd
tests/: conftest.py  python.py  run.py  test_array_print_methods.py  test_arrays.py  test_attribute.py  test_base_object.py  test_bob.py  test_collection.py  test_geometry_types.py  test_modifier.py  test_nodes.py  test_obj.py  test_vdb.py
(+12 files in other folders)
