[project]
name = "databpy"
version = "0.7.0"
description = "A data-oriented wrapper library for the Blender Python API"
readme = "README.md"
dependencies = [
    "numpy",
]
requires-python = "~=3.13.0"
keywords = ["blender", "python", "numpy"]
maintainers = [
    {name="Brady Johnston", email="brady.johnston@me.com"},
    ]

[project.urls]
Homepage = "https://bradyajohnston.github.io/databpy"
Repository = "https://github.com/bradyajohnston/databpy"
Documentation = "https://bradyajohnston.github.io/databpy"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"


[project.optional-dependencies]
bpy = ["bpy>=5.1"]
dev = [
    "fake-bpy-module",
    "polars",
    "quarto-cli>=1.9",
    "quartodoc",
    "jupyter",
    "polars",
    "pytest",
    "pytest-cov"
    ]

[tool.uv.workspace]
members = [
    ".",
]
